# openconfig

./: .gitignore  AGENTS.md  CLAUDE.md  GLOBAL_WORKFLOW.md  README.md  changelog.md  context.md  deployment.md  finding.md  opencode.json  product.md  project.md  todo.md
agents/: code-reviewer.md  js-ts-dev.md  python-dev.md  tester.md
configs/frontend/: biome.json
configs/python/: mypy.ini  pyproject.toml  ruff.toml
plugins/biome-auto-fix/: index.ts  package.json
plugins/ruff-auto-fix/: index.ts  package.json
plugins/setup-dev-hook/: index.ts  package.json
scripts/: bootstrap.sh  install-global.sh  install-project.sh
skills/code-review/: SKILL.md
skills/planning/: SKILL.md
skills/project-analysis/: SKILL.md
skills/test-generation/: SKILL.md
